--- a/Website/styles.css
+++ b/Website/styles.css
@@ -1,297 +1,276 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+﻿/* general fonts */
+@import url('https://fonts.googleapis.com/css2?family=Island+Moments&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Island+Moments&family=Montserrat:wght@100;400;500&display=swap');
 
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+h1{
+    font-family: 'Island Moments', cursive;
+    color: white;
+    font-size: 2.5vw;
+    font-weight: 100;
+    line-height: 0;
 }
 
-body {
-    color: #464646;
-    font-size: 16px;
-    line-height: 1.2;
+h2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    color: white;
+    font-size: 0.7vw;
+    line-height: 0;
 }
 
-a {
+p{
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-size: 0.8em;
+}
+
+a{
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-size: 1em;
     text-decoration: none;
-    color: #F7001D;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 
-li {
-    list-style: none;
-}
-
-.container {
-    max-width: 1000px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 1.2em;
+a:hover{
+    letter-spacing: 0.1em;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 
 
-/* main */
-
-main {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom right;
+/* Main */
+body{
+    background: linear-gradient(180deg, rgba(63,92,115,1) 20%, rgba(123,132,140,1) 80%);
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 
-.main {
-    min-height: calc(100vh - 200px);
-}
-
-.main {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 1.2em;
-}
-
-@media (min-width: 768px) {
-    .main {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-
-/* Common */
-.flex-center-center {
+main{
     display: flex;
+    align-items: center;
     justify-content: center;
-    align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
 
-.flex-between-center {
+
+/* Input section */
+#appContainer{
+    border: 0.5px solid rgba(255, 255, 255, 0.3);
+    border-radius: 30px;
+    width: 40vw;
+    height: 40vh;
+
+}
+
+#app{
+    margin: 5%;
+    height: 78%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
+    justify-content: flex-start;
+    font-size: 20px;
 }
 
 
-/*block*/
-
-.block {
-    background-color: #fff;
-    padding: 1.2em;
-    box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.2);
-}
-
-.block-title {
-    margin: 1em 0 1.2em;
-    text-align: center;
-    line-height: 1.3;
-}
-
-input, textarea, button {
-    width: 100%;
-    border: 1px solid #00b698;
-    border-radius: 6px;
-    padding: 5px 10px;
-    margin-bottom: 1.2em;
-}
-
-input, button {
-    height: 40px
-}
-
-    input.err {
-        border: 1px solid #FF6700;
-    }
-
-textarea {
-    height: 100px;
-    resize: none;
-}
-
-button.btn {
-    background-color: #FF6700;
-    border-color: #FF6700;
-    color: #fff;
-    font-size: 1.2em;
-    cursor: pointer;
-}
-
-.output-block {
-    max-height: calc(100vh - 200px);
-    overflow: auto;
-}
-
-.journal-record {
-    padding: 1em;
-    box-shadow: 0px 0px 24px 3px rgba(193, 193, 193, 0.48);
-    border: 1px solid rgba(204, 204, 204, 0.3);
-    margin-bottom: 1em;
-}
-
-    .journal-record.hide,
-    .journal-record-placeholder.hide {
-        display: none;
-    }
-
-    .journal-record > div {
-        margin-bottom: 1em;
-    }
-
-.journal-record-placeholder {
-    background-image: url("../assets/icons/logo.svg");
-    width: 100%;
-    height: 200px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    opacity: 0.15;
-}
-
-.jr-weather {
-    width: 30%;
-    text-align: center;
-    font-size: 1.2em;
-}
-
-.jr-icon {
-    width: 40px;
-    height: 40px;
-    display: block;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.journal-record .label {
-    font-size: 0.9em;
-    margin-bottom: 5px;
-    color: #FF6700;
-    display: inline-block;
-}
-
-.jr-date {
-    font-weight: bold;
-}
-
-.jr-temp {
-    color: #00b698;
-    font-weight: bold;
-}
-
-
-
-/* Header */
-
-
-header {
-    box-shadow: 0px -3px 9px 0px rgba(5, 70, 59, 0.5);
-}
-
-.header {
-    min-height: 100px;
-}
-
-.logo {
-    width: 60px;
-    height: 60px;
-    background-image: url('../assets/icons/logo.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-#switch input {
-    display: none;
-}
-
-.switch-buttons {
-    background-color: #464646;
-    position: relative;
-    width: 90px;
-    border-radius: 20px;
-    overflow: hidden;
-    height: 40px;
-}
-
-    .switch-buttons span {
-        width: 45px;
-        height: 40px;
-        color: #fff;
-        font-weight: 700;
-        cursor: pointer;
-        position: relative;
-        z-index: 2;
-    }
-
-    .switch-buttons:after {
-        content: '';
-        display: block;
-        width: 45px;
-        height: 40px;
-        background-color: #FF6700;
-        position: absolute;
-        left: 0;
-        z-index: 1;
-        transition: all 0.6s;
-        border-top-left-radius: 20px;
-        border-bottom-left-radius: 20px;
-    }
-
-#degree_units:checked + div.switch-buttons:after {
-    left: 45px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-
-/* Footer */
-footer {
-    background-color: #464646;
-}
-
-.footer {
-    height: 100px;
-    color: #fff;
+#inputs {
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+    display: flex;
+    width: 50%;
+    height: 100%;
     flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
-.copyright {
-    margin-bottom: 1em;
+
+#holderInputs{
+    margin-top: 10%;
+    width: 100%;
 }
 
-.social-buttons {
+#feelGenerate{
+    width: 100%;
+}
+
+#holderFeel{
     display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 7%;
 }
 
-.s-icon {
-    display: block;
-    width: 32px;
-    height: 32px;
-    margin: 0 5px;
-    background-size: contain;
-    background-position: center center;
+input{
+    display:block;
+    border-radius: 12px;
+    height: 2.2rem;
+    width: 50%;
+    background:rgba(255, 255, 255, 0.1);
+    color: #ffffff;
+    font-size: 20px;
+    border: none;
+    padding-left: 20px;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 
-    .s-icon.fb {
-        background-image: url(../assets/icons/fb.svg);
-    }
-
-    .s-icon.in {
-        background-image: url(../assets/icons/in.svg);
-    }
-
-    .s-icon.gh {
-        background-image: url(../assets/icons/gh.svg);
-    }
-
-@media(min-width:768px) {
-
-    .footer {
-        flex-direction: row;
-    }
-
-    .copyright {
-        margin-bottom: 0;
-    }
-
-    .s-icon {
-        margin: 0 0 0 10px;
-    }
+input:hover{
+    background:rgba(255, 255, 255, 0.2);
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
+
+#error{
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    font-size: 0.7em;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+#feelings {
+    width: 70% !important;
+}
+
+button{
+    color: #ffffff;
+    border: none;
+    background: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    font-size: 4em;
+    line-height: 0;
+    cursor:pointer;
+    opacity: 0.5;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+button:hover{
+    opacity: 1;
+    transform: rotate(360deg);
+    -webkit-transition: all 1s ease-out;
+    transition: all 1s ease-out;
+
+}
+
+/* Reset style for HTML element on active to have no border*/
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+/* Style for Placeholder Text*/
+::placeholder { /* Firefox, Chrome, Opera */ 
+    color: rgba(255, 255, 255, 0.3);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8em;
+
+} 
+  
+:-ms-input-placeholder { /* Internet Explorer 10-11 */ 
+    color: rgba(255, 255, 255, 0.3);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8em;
+
+} 
+  
+::-ms-input-placeholder { /* Microsoft Edge */ 
+    color: rgba(255, 255, 255, 0.3);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8em;
+
+}
+
+
+/* Output section */
+
+.outputs{
+    width: 50%;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity:0;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+#outputs{
+    width: 70%;
+}
+
+#entryHolder{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#weather{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+#description{
+    margin-left: 20px;
+}
+
+#temp{
+    font-size: 5vw;
+    font-weight: 100;
+
+}
+
+#city{
+    font-size: 2.7vw;
+    font-weight: 500;
+
+}
+
+
+#date{
+    font-size: 0.9em;
+    font-weight: 100;
+    text-align: left;
+
+}
+
+#content{
+    font-size: 1.2em;
+    font-weight: 400;
+    margin-top: 30px;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 10vh;
+}
+
+.social{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.social a{
+    margin-right: 20px;
+}
+
